--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
 
     <div
       id="carouselExampleIndicators"
-      class="carousel slide"
+      class="carousel slide margin"
       data-bs-ride="carousel"
     >
-      <div class="carousel-indicators">
+      <div class="carousel-indicators margin">
         <button
           type="button"
           data-bs-target="#carouselExampleIndicators"
@@ -168,6 +168,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+
     <div class="campagine-section text-center mt-5 mb-5">
       <h2>JOURNEY HOME FOR THE HOLIDAYS</h2>
       <p>Starring Alicia Vikander</p>
@@ -179,7 +180,7 @@
         <div class="col-md-4 col-sm-12">
           <div class="card">
             <img
-              src="./image/cq5dam.web.966.966.webp"
+              src="./image/cq5dam.web.966.966.avif"
               class="card-img-top"
               alt="..."
             />
@@ -191,7 +192,7 @@
         <div class="col-md-4 col-sm-12">
           <div class="card">
             <img
-              src="./image/cq5dam.web.966.966.avif"
+              src="./image/cq5dam.web.966.966.webp"
               class="card-img-top"
               alt="..."
             />
@@ -223,12 +224,12 @@
             <img src="./image/korea.webp" width="16" height="12" />
             Korea
           </div>
-          <div class="col"><a href="#"> Email Sign-Up</a></div>
+          <div class="col"><a href="#">Email Sign-Up</a></div>
           <div class="col"><a href="#">Contact Us</a></div>
           <div class="col"><a href="#">Apps</a></div>
           <div class="col"><a href="#">Follow Us</a></div>
           <div class="col"><a href="#">California Transparency</a></div>
-          <div class="col"><a href="#"> Legal Notice</a></div>
+          <div class="col"><a href="#">Legal Notice</a></div>
           <div class="col"><a href="#">Careers</a></div>
           <div class="col"><a href="#">Sitemap</a></div>
         </div>
